[package]
name = "sls"
version = "0.1.0"
edition = "2021"
description = "SLS (Super Light Stream) - NACK-based block assembly protocol over UDP"
authors = ["SLS Protocol Team"]

[lib]
name = "sls"
path = "src/lib.rs"

[[bin]]
name = "sls-server"
path = "src/bin/server.rs"

[[bin]]
name = "sls-client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
bytes = "1.5"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
dashmap = "5.5"
rand = "0.8"
crc32fast = "1.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
crossbeam-channel = "0.5"

# Crypto dependencies
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }

# Parallel processing
rayon = "1.8"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
